2011-05-23  Ivan Maidanski  <ivmai@mail.ru>

	* mark.c (GC_dirty): Add prototype (only if MANUAL_VDB).
	* stubborn.c (GC_dirty): Ditto.
	* include/private/gcconfig.h (GWW_VDB, MPROTECT_VDB, PCR_VDB,
        PROC_VDB): Undefine if MANUAL_VDB.
	* include/private/gcconfig.h (DEFAULT_VDB): Don't define if
	MANUAL_VDB.
	* os_dep.c (async_set_pht_entry_from_index): Define for
	MANUAL_VDB.
	* os_dep.c (GC_read_dirty): Set GC_dirty_maintained only if
	success; if ioctl() failed then just print warning instead of
	aborting.

2011-05-23  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gc_priv.h (GC_ASSERT): Use "%d" (instead of %ld)
	for line number printing.

2011-05-23  Ivan Maidanski  <ivmai@mail.ru>

	* os_dep.c (GC_read_dirty): Add debug logging if DEBUG_DIRTY_BITS
	(for PROC_VDB only); print errors via GC_err_printf; rename "ps"
	and "np" local variables to npages and pagesize, respectively;
	remove "current_addr" local variable.
	* os_dep.c: Refprmat comments.

2011-05-22  Ivan Maidanski  <ivmai@mail.ru>

	* os_dep.c (GC_get_main_stack_base): Convert to GC_get_stack_base
	for BeOS and OS/2; define HAVE_GET_STACK_BASE.
	* os_dep.c (GET_MAIN_STACKBASE_SPECIAL): Define when a specific
	GC_get_main_stack_base implementation is defined.
	* os_dep.c (GC_get_main_stack_base): Define that based on
	GC_get_stack_base() in a single place (only if
	GET_MAIN_STACKBASE_SPECIAL is unset); check GC_get_stack_base()
	result.

2011-05-20  Ivan Maidanski  <ivmai@mail.ru>

	* mark.c (GC_push_selected): Remove "push_fn" argument (use
	GC_push_all directly); update the documentation; reformat the
	comment.
	* mark.c (GC_push_conditional): Simplify the code (for better
	readability).

2011-05-20  Ivan Maidanski  <ivmai@mail.ru>

	* mark.c (alloc_mark_stack): Use FALSE/TRUE (instead of 0/1) for
	boolean local variables.
	* doc/README.macros (GC_PREFER_MPROTECT_VDB): Update.
	* os_dep.c (GC_page_was_dirty, GC_page_was_ever_dirty,